Update 'go-rcjrhkkd' component image to: quay.io/rhtap_qe/go-rcjrhkkd:1ca87de5ce02bc9d180a29a44f5dbb2b4caddb4d@sha256:b290ae2e3928ed1fa17da94165da34573f1998f6016f73d0a5d0c0a8ba784d79

--- a/components/go-rcjrhkkd/overlays/development/deployment-patch.yaml
+++ b/components/go-rcjrhkkd/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-rcjrhkkd
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-rcjrhkkd:1ca87de5ce02bc9d180a29a44f5dbb2b4caddb4d@sha256:b290ae2e3928ed1fa17da94165da34573f1998f6016f73d0a5d0c0a8ba784d79
+          name: container-image
